--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <!-- body -->
 
 <body class="main-layout">
-<!--<div class="loader_bg">-->
-<!--    <div class="loader"><img src="images/loading.gif" alt="#"></div>-->
-<!--</div>-->
+<div class="loader_bg">
+    <div class="loader"><img src="images/loading.gif" alt="#"></div>
+</div>
 
 <header>
     <!-- header inner -->
@@ -78,7 +78,7 @@
                 <div class="col-md-2">
                     <ul class="social_icon">
                         <li>
-                            <a href="https://wa.me/"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                            <a href="https://wa.me/+46760088309"><i class="fa fa-whatsapp" aria-hidden="true"></i>
                             </a>
                         </li>
 
@@ -113,18 +113,30 @@
                         <div class="row d_flex">
                             <div class="col-md-6">
                                 <img class="bann_img round-border-tl"
-                                     src="images/317568984_864364961421622_4722773541161088886_n.webp" alt="#">
+                                     src="images/keratin-queen-4.jpg" alt="#">
                             </div>
                             <div class="col-md-6">
-                                <h1>Vanilla Make Up Room &amp; Aesthetics</h1>
+                                <h1>Strengthens Hair</h1>
                                 <p>
-                                    Ambienti më i ngrohtë
-                                    në qytet ku ju mund të merrni të gjitha shërbimet për të
-                                    qënë të kuruara dhe të bukura në detaje.
+                                    Keratin helps strengthen the hair shaft, making it more resilient to breakage and
+                                    damage. This can result in reduced hair fall and increased overall hair strength.
                                 </p>
-                                <a class="get_btn" href="https://wa.me/+46760088309" role="button"><i
-                                        class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Book
-                                    Now</a>
+                                <a class="get_btn2" href="https://calendly.com/keratin-queen/keratin-protein-behandling"
+                                   role="button" target="_blank"
+                                   style="display: inline-block;">
+                                    <i class="fa fa-book" aria-hidden="true" style="margin-right: 20px;"></i>Book Now
+                                </a>
+                                <!--                                &lt;!&ndash; Calendly inline widget begin &ndash;&gt;-->
+                                <!--                                <div class="calendly-inline-widget" data-url="https://calendly.com/keratin-queen/keratin-protein-behandling" style="min-width:320px;height:700px;"></div>-->
+                                <!--                                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>-->
+                                <!--                                &lt;!&ndash; Calendly inline widget end &ndash;&gt;-->
+
+                                <a class="get_btn" href="https://wa.me/+46760088309" role="button" target="_blank"
+                                   style="display: inline-block; margin-right: 10px;">
+                                    <i class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Contact
+                                    Us
+                                </a>
+
                             </div>
                         </div>
                     </div>
@@ -135,18 +147,24 @@
                     <div class="carousel-caption relative">
                         <div class="row d_flex">
                             <div class="col-md-6">
-                                <img class="bann_img round-border-tr" src="images/keratin-queen.jpg" alt="#">
+                                <img class="bann_img round-border-tr"   src="images/keratin-queen-1.jpeg" alt="#">
                             </div>
                             <div class="col-md-6">
-                                <h1>Lifting — masazh</h1>
+                                <h1>Adds Shine</h1>
                                 <p>
-                                    Lifting është metodë shumë efikase kundër plakjes
-                                    së fytyrës, qafës dhe dekoltes. Lëkura bëhet më e
-                                    tendosur dhe gjithashtu më e tonifikuar.
+                                    Keratin can smooth down the hair cuticle, reducing frizz and creating a smoother
+                                    surface. This results in shinier, more manageable hair that is less prone to
+                                    tangling.
                                 </p>
-                                <a class="get_btn" href="https://wa.me/+46760088309" role="button"><i
-                                        class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Book
-                                    Now</a>
+                                <a class="get_btn2" href="https://calendly.com/keratin-queen/keratin-protein-behandling"
+                                   role="button" target="_blank"
+                                   style="display: inline-block;"><i class="fa fa-book" aria-hidden="true"
+                                                                     style="margin-right: 20px;"></i>Book Now</a>
+                                <a class="get_btn" href="https://wa.me/+46760088309" role="button"
+                                   style="display: inline-block; margin-right: 10px;"><i class="fa fa-whatsapp"
+                                                                                         aria-hidden="true"
+                                                                                         style="margin-right: 20px;"></i>Contact
+                                    Us</a>
                             </div>
                         </div>
                     </div>
@@ -159,16 +177,25 @@
                         <div class="row d_flex">
                             <div class="col-md-6">
                                 <img class="bann_img round-border-br"
-                                     src="images/320201530_661706882366307_673451432217888003_n.webp" alt="#">
+                                     src="images/keratin-queen-2.jpeg" alt="#">
                             </div>
                             <div class="col-md-6">
-                                <h1>Makeup profesional</h1>
+                                <h1>Repairs Damage</h1>
                                 <p>
-                                    Makeup duke përdorur teknikat më të avancuara dhe të kërkuara të momentit.
+                                    Keratin treatments and products can help repair damage caused by
+                                    heat styling, chemical treatments, and environmental factors.
                                 </p>
-                                <a class="get_btn" href="https://wa.me/+46760088309" role="button">
-                                    <i class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>
-                                    Book Now</a>
+                                <a class="get_btn2" href="https://calendly.com/keratin-queen/keratin-protein-behandling"
+                                   role="button" target="_blank"
+                                   style="display: inline-block;">
+                                    <i class="fa fa-book" aria-hidden="true" style="margin-right: 20px;"></i>Book Now
+                                </a>
+
+                                <a class="get_btn" href="https://wa.me/+46760088309" role="button" target="_blank"
+                                   style="display: inline-block; margin-right: 10px;">
+                                    <i class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Contact
+                                    Us
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -180,17 +207,26 @@
                         <div class="row d_flex">
                             <div class="col-md-6">
                                 <img class="bann_img round-border-bl"
-                                     src="images/321315386_162528133168096_2474957892999402170_n.webp" alt="#">
+                                     src="images/keratin-queen-3.jpeg" alt="#">
                             </div>
                             <div class="col-md-6">
-                                <h1>Nails</h1>
+                                <h1>Enhances Elasticity</h1>
                                 <p>
-                                    Manikyr, pedikyr, thonj me xhel, tipsa dhe të gjitha shërbimet për estetikën e
-                                    thonjve.
+                                    Keratin improves the elasticity of the hair, allowing it to stretch without
+                                    breaking. This can help prevent hair from becoming brittle and prone to breakage,
+                                    leading to healthier-looking hair with better flexibility and bounce.
                                 </p>
-                                <a class="get_btn" href="https://wa.me/+46760088309" role="button">
-                                    <i class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>
-                                    Book Now</a>
+                                <a class="get_btn2" href="https://calendly.com/keratin-queen/keratin-protein-behandling"
+                                   role="button" target="_blank"
+                                   style="display: inline-block;">
+                                    <i class="fa fa-book" aria-hidden="true" style="margin-right: 20px;"></i>Book Now
+                                </a>
+
+                                <a class="get_btn" href="https://wa.me/+46760088309" role="button" target="_blank"
+                                   style="display: inline-block; margin-right: 10px;">
+                                    <i class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Contact
+                                    Us
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -207,12 +243,6 @@
         </div>
     </div>
 </section>
-<!-- end banner -->
-<!-- what we do  -->
-
-<!-- end what we do  -->
-
-<!-- our pricing -->
 <div class="container" id="pricing">
     <div class="row">
         <div class="col-md-12">
@@ -226,69 +256,13 @@
     <div>
         <table class="table">
             <tr>
-                <td>Brow Lamination</td>
-                <td>2,000 leke</td>
+                <td>The price depends on the length and thickness of the hair</td>
+                <td>Starting at 1500 SEK</td>
             </tr>
-            <tr>
-                <td>Depilim Total</td>
-                <td>2,000 leke</td>
-            </tr>
-            <tr>
-                <td>Krehje Flokesh</td>
-                <td>700 leke</td>
-            </tr>
-            <tr>
-                <td>Lvl Qerpik</td>
-                <td>2,000 leke</td>
-            </tr>
-            <tr>
-                <td>Make up Profesional</td>
-                <td>4,000 leke</td>
-            </tr>
-            <tr>
-                <td>Manikyr + Tipsa</td>
-                <td>1,500 leke</td>
-            </tr>
-            <tr>
-                <td>Manikyr-700</td>
-                <td>1,000 leke</td>
-            </tr>
-            <tr>
-                <td>Masazh Anticelulit + Termokopert</td>
-                <td>2,000 leke</td>
-            </tr>
-            <tr>
-                <td>Masazh lifting 30 min</td>
-                <td>3,000 leke</td>
-            </tr>
-            <tr>
-                <td>Masazh relax 40 min</td>
-                <td>3,000 leke</td>
-            </tr>
-            <tr>
-                <td>Masazh relax 60 min</td>
-                <td>4,000 leke</td>
-            </tr>
-            <tr>
-                <td>Pedikyr + Trajtim</td>
-                <td>2,000 leke</td>
-            </tr>
-            <tr>
-                <td>Pedikyr</td>
-                <td>1,000 leke</td>
-            </tr>
-            <tr>
-                <td>Qerpik 2D-4D</td>
-                <td>3,500 leke</td>
-            </tr>
-            <tr>
-                <td>Qerpik Classic</td>
-                <td>3,000 leke</td>
-            </tr>
-
         </table>
     </div>
-    <a class="get_btn" style="text-align: center; margin: 0 auto; margin-top: 50px;" href="https://wa.me/+46760088309"><i
+    <a class="get_btn" style="text-align: center; margin: 0 auto; margin-top: 50px;"
+       href="https://wa.me/+46760088309"><i
             class="fa fa-whatsapp" aria-hidden="true" style="margin-right: 20px;"></i>Book Now</a>
 </div>
 <hr style="border: solid 1px black;width: 300PX;">
@@ -325,7 +299,14 @@
     <div class="kontakt">
         <a href="https://www.instagram.com/keratin_protein_malmo_sweden/" class="fa fa-instagram"></a>
         <a href="https://wa.me/+46760088309" class="fa fa-whatsapp"></a>
-<!--        <a href="https://www.tiktok.com/@keratin_protein_malmo_sw?_t=8kD2INcr1FZ&_r=1"  class="fa fa-tiktok"></a>-->
+        <a href="https://www.tiktok.com/@keratin_protein_malmo_sw?_t=8kD2INcr1FZ&_r=1" target="_blank">
+            <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="tiktok"
+                 class="svg-inline--fa fa-tiktok fa-w-3" role="img" xmlns="http://www.w3.org/2000/svg"
+                 viewBox="0 0 448 512" width="80" height="80">
+                <path fill="#000"
+                      d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.381A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"></path>
+            </svg>
+        </a>
         <a href="https://www.facebook.com/profile.php?id=61550903937668" class="fa fa-facebook"></a>
         <a href="tel:+46764297004" class="fa fa-phone"></a>
     </div>
@@ -346,7 +327,8 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>About Us</h3>
                     <p class="variat">
-                        Welcome to Keratin Queen, where we specialize in giving you smooth, shiny, and fabulous straight hair!
+                        Welcome to Keratin Queen, where we specialize in giving you smooth, shiny, and fabulous straight
+                        hair!
                         Our expert stylists use top-notch products to make sure your locks look amazing every time.
                         Come on in and let us make you feel like royalty!
                     </p>
