--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords"
           content="Hairdresser, Hairstylist, Hair salon, Colorist, Hair styling, Hair cut, Hair Color, Highlights, Hair extension, Barber, Barbershop">
     <meta name="description"
-          content="Ambienti më i ngrohtë në qytet ku ju mund të merrni të gjitha shërbimet për të qënë të kuruara dhe të bukura në detaje.">
+          content="Transform your hair with our keratin hair treatment! Say goodbye to frizz and hello to smooth, shiny locks.">
     <meta name="author" content="">
     <!-- bootstrap css -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
