--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class="carousel-caption relative">
                         <div class="row d_flex">
                             <div class="col-md-6">
-                                <img class="bann_img round-border-tr"   src="images/keratin-queen-1.jpeg" alt="#">
+                                <img class="bann_img round-border-tr" src="images/keratin-queen-1.jpeg" alt="#">
                             </div>
                             <div class="col-md-6">
                                 <h1>Adds Shine</h1>
@@ -256,8 +256,24 @@
     <div>
         <table class="table">
             <tr>
-                <td>The price depends on the length and thickness of the hair</td>
-                <td>Starting at 1500 SEK</td>
+                <td>Hair length 30 cm</td>
+                <td>2000 SEK</td>
+            </tr>
+            <tr>
+                <td>Hair length 40 cm</td>
+                <td>2700 SEK</td>
+            </tr>
+            <tr>
+                <td>Hair length 50 cm</td>
+                <td>3200 SEK</td>
+            </tr>
+            <tr>
+                <td>Hair length 60 cm</td>
+                <td>3700 SEK</td>
+            </tr>
+            <tr>
+                <td>Hair length 70 cm</td>
+                <td>4000 SEK</td>
             </tr>
         </table>
     </div>
